# wagtail-template

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  package-lock.json  package.json  pyproject.toml  vite.config.js
src/: conftest.py
src/home/: factories.py  models.py
src/home/migrations/: 0001_initial.py
src/home/tests/: test_home_page.py
src/patterns/templates/patterns/: base.html  base_pattern.html
src/patterns/templates/patterns/pages/error/: 404.html  404.md  404.yaml  500.html  500.md  500.yaml
src/patterns/templates/patterns/pages/home/: home_page.html  home_page.md
src/project_name/: urls.py  views.py  wsgi.py
src/project_name/settings/: base.py  dev.py  production.py  test.py
src/project_name/static/css/: style.css
src/project_name/tests/: test_error_views.py
